--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "sachin",
   "license": "MIT",
+  "engines": {
+    "node": "14.15.5"
+  },
   "scripts": {
     "dev": "nodemon server.js",
     "serve": "nodemon server.js",
